# test

./: .gitignore  LICENSE  README.md  c.strlen  c.union  docker-compose.yaml  main.py  pyproject.toml  qsort function  way of sizeof  way of strlen
alembic/: env.py
alembic/versions/: 6bcc89f3962e_create_documents_table.py  dd7e9bbb701d_create_initial_tables.py  eb7f8d8604bd_add_create_update_time_to_user.py
src/: base_model.py  config.py  database.py
src/auth/: config.py  db.py  dependencies.py  models.py  router.py  schemas.py  service.py  users.py
src/document/: config.py  dependencies.py  documentparse.py  ingestion.py  models.py  router.py  schema.py
src/rag/: config.py  embedding_client.py  milvus_client.py
