[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "httpx>=0.28.1",
    "langchain-openai>=1.1.14",
    "minio>=7.2.20",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pymilvus>=2.6.12",
    "python-dotenv>=1.2.2",
    "typing>=3.10.0.0",
    "uvicorn>=0.44.0",
]
